Putting navbar in fixed-top for better mobile use, this also correct the shift between mouse and canvas

--- a/imgEditor/css/index.css
+++ b/imgEditor/css/index.css
@@ -4,6 +4,11 @@
   padding-right:20px;
   padding-left:20px;
 }
+body { padding-top: 70px; }
+.navbar{
+  padding-left: 30px;
+  padding-right:30px;
+}
 h1{
   text-align: center;
   font-family: 'Open Sans Condensed', sans-serif;
@@ -127,4 +132,13 @@ select {
 }
 #canvas-wrapper{
   text-align: center;
+}
+.dropdown-menu{
+  text-align: center;
+}
+.dropdown-menu .btn-default{
+  width:100%;
+  white-space: nowrap;
+ overflow: hidden;
+ text-overflow: ellipsis;
 }
